--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="content">
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="images/transit.jpg" alt="transit boi">
+      <img src="transit.jpg" alt="transit boi">
 
     </div>
   </div>
